subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_3.while
int f(real x) {
    return x;
}